--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -8,6 +8,12 @@
     display: block;
     background: #292E2F;
 }
+h2{
+    font-size: 35px;
+    font-weight: 500;
+    color: whitesmoke;
+
+}
 .logo{
     text-align: center;
 }
@@ -89,7 +95,8 @@ fieldset{
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08) inset;
     margin-bottom: 15px;
-   
+    color: #57566b;
+    outline: none;
 }
 
 .formElement input[type=password]{
@@ -102,6 +109,8 @@ fieldset{
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08) inset;
     margin: 15px;
+    color: #57566b;
+    outline: none;
 }
 
 
@@ -115,6 +124,8 @@ fieldset{
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08) inset;
     margin-bottom: 15px;
+    color: #57566b;
+    outline: none;
    
 }
 
@@ -128,6 +139,8 @@ fieldset{
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08) inset;
     margin-bottom: 15px;
+    color: #57566b;
+    outline: none;
 }
 
 h1{
@@ -415,20 +428,38 @@ input[type=button]{
 }
 
 .register_form{
-    padding: 50px 0 0 100px;
+    padding: 50px;
     border-style: dotted;
-    width: 91%;
     height: 100%;
     float: left;
-    background-color: #6C6D68;
+    background-color: #3B3C3C;
     border-color: #13BDC3;
     margin: 10px;
+    border-width: 1px;
+    border-radius: 5px;
 
 }
 
 .form_label{
     color: whitesmoke;
     font-size: 15px;
+    margin: 17px 0 7px 0;
+}
+
+.rnumber {
+    font-size: 13px;
+    width: 42px;
+    border-radius: 4px;
+    border: 1px solid #A3ACB8;
+    font-family: verdana;
+    font-weight: 400;
+    outline: none;
+    height: 20px;
+    color: #57566b;
+}
+.pntr{
+    color: #B1B6B6;
+    font-size: 14px;
 }
 
 
@@ -734,3 +765,5 @@ input[type=button]:hover{
     float: left;
 
 }
+*/
+
