--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -240,6 +240,7 @@ input[type=button]{
     margin: 0 9px -9px;
 }
 
+
 #tabselector ul{
     list-style: none;
     overflow: hidden;
@@ -248,23 +249,26 @@ input[type=button]{
     background-color: #1CCED0;
     color: white;
     font-weight: bold;
+    font-size: 17px;
 }
 
 
-
+/*Formato de la letra de la barra*/
 #tabselector ul li a{
     float: left;
-    padding: 18px 45px;
-    font-size: 17px;
+    padding: 10px 20px;
     text-decoration: none;
     color: #FFFFFF;
+    padding: 18px 45px;
+
+   
 }
 
+/*Cuadro seleccionado*/
 #tabselector ul li.selected a, #tabselector ul li a:hover{
     background-color: #FFFFFA; 
     color: #4D4C54;
 }
-
 
 #tabselector ul li:hover{
     cursor: pointer;   
@@ -272,12 +276,16 @@ input[type=button]{
 
 #tabcontent {
     width: 100%;
-    background-color: #FFFFFA;
+    /*background-color: #FFFFFA;
+    float: left;
+    padding: 125px;
+    padding-top: 40px;*/
 }
 
 #tabcontent > div{
     display: none;
-    padding: 5px;
+    /*padding: 5px;*/
+
 }
 
 #tabcontent > div.active{
@@ -289,7 +297,97 @@ input[type=button]{
     border: 1px solid #32317F;
     float: left;
     width: 100%;
+    /*background: #FFFFFA;*/
 }
+
+
+
+
+
+
+/*Content 2*/
+#my_selector #profile_options{
+    list-style: none;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background-color: #E3E3E1;
+    color: white;
+    font-weight: bold;
+
+
+}
+
+
+#my_selector #profile_options{
+    list-style: none;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background-color: #E3E3E1;
+    color: white;
+    font-weight: bold;
+
+}
+
+
+
+#my_selector ul li {
+    float: left;
+    padding: 10px;
+    font-size: 17px;
+    text-decoration: none;
+    color: #FFFFFF;
+    border-radius: 4px;
+    border-style: double;
+    border-color: #C1C1C1;
+    border-width: 1px;
+
+}
+
+#my_selector ul li.selected , #my_selector ul li:hover{
+    background-color: #FFFFFA; 
+    color: #4D4C54;
+}
+
+
+#my_selector ul li:hover{
+    cursor: pointer;   
+}
+
+#profile_content {
+    width: 100%;
+    background-color: #E8E8E8;
+    float: left;
+    padding-bottom: 20px;
+}
+
+
+
+#profile_content > div.active{
+    display: block; 
+
+}
+
+#my_selector{
+    float: left;
+    width: auto;
+}
+
+#content-tab3{
+    width: 100%;
+    /* width: auto; */
+    background-color: #FFFFFA;
+    float: left;
+    padding: 40px 0; 
+    /*padding-top: 40px;*/
+    /* padding: 5px; */
+}
+
+
+
+
+
 
 .box{
     margin: 10px;
@@ -462,7 +560,72 @@ input[type=button]{
     font-size: 14px;
 }
 
+.menu_profile{
+    max-width: 170px;
+}
 
+#mycoment{
+    margin: 20px;
+    border-radius: 3px;
+    width: 70%;
+    max-width: 500px;
+    height: 100px;
+    color: #57566B;
+    font-size: 12px;
+
+}
+
+#content-tab1{
+    width: 100%;
+    /* width: auto; */
+    background-color: #FFFFFA;
+    float: left;
+    padding: 40px 0; 
+    /*padding-top: 40px;*/
+    /* padding: 5px; */
+}
+#content-tab2{
+    width: 100%;
+    /* width: auto; */
+    background-color: #FFFFFA;
+    float: left;
+    padding: 40px 0; 
+    /*padding-top: 40px;*/
+    /* padding: 5px; */
+}
+
+.left_side{
+    width: 67%;
+    border: double 1px #BFD35B;
+    float: left;
+    border-radius: 2px;
+    /* text-align: center; */
+    /* padding-top: 15px; */
+    /* padding-left: 15px; */
+    margin-left: 20px;
+}
+
+#comentabttn{
+    /* float: left; */
+    /* float: left; */
+    /* text-align: center; */
+    margin-left: 20px;
+    /* width: 100%; */
+    /* max-width: 151px; */
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.right_side{
+    width: 25%;
+    float: left;
+    border: double 1px #A3ACB8;
+    border-radius: 2px;
+    margin-left: 25px;
+    height: 100px;
+    background: gainsboro;
+
+}
 /*input[type="checkbox"] + label{
     width:19px;
     height:19px;
