--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -280,6 +280,8 @@ input[type=button]{
     float: left;
     padding: 125px;
     padding-top: 40px;*/
+    /* padding: 20px; */
+    float: left;
 }
 
 #tabcontent > div{
@@ -305,34 +307,43 @@ input[type=button]{
 
 
 
-/*Content 2*/
-#my_selector #profile_options{
+/*Content Profile*/
+
+
+#content-tab3 .profile_options{
     list-style: none;
     overflow: hidden;
     margin: 0;
-    padding: 0;
-    background-color: #E3E3E1;
-    color: white;
-    font-weight: bold;
+    padding-left: 115px;
+    text-align: center;
 
 
 }
 
-
-#my_selector #profile_options{
-    list-style: none;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    background-color: #E3E3E1;
-    color: white;
-    font-weight: bold;
+#content-tab3 a{
+    float: left;
+    width: 100%;
+    max-width: 170px;
+    padding: 7px;
+    border-radius: 4px;
+    border-style: double;
+    border-color: #C1C1C1;
+    border-width: 1px;
 
 }
 
+#content-tab3 ul li a{
+    float: left;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #FFFFFF;
+    padding: 18px 45px;
+
+   
+}
 
 
-#my_selector ul li {
+.profile_options li {
     float: left;
     padding: 10px;
     font-size: 17px;
@@ -345,33 +356,21 @@ input[type=button]{
 
 }
 
-#my_selector ul li.selected , #my_selector ul li:hover{
-    background-color: #FFFFFA; 
-    color: #4D4C54;
+
+#content-tab3 a.selected, #content-tab3 a:hover{
+    background-color: #BFD35A; 
 }
 
 
-#my_selector ul li:hover{
+#content-tab3 a:hover{
     cursor: pointer;   
 }
 
-#profile_content {
-    width: 100%;
-    background-color: #E8E8E8;
-    float: left;
-    padding-bottom: 20px;
-}
-
-
-
-#profile_content > div.active{
-    display: block; 
-
-}
-
-#my_selector{
-    float: left;
-    width: auto;
+.profile_content {
+        border: solid 1px black;
+    padding: 20px;
+    text-align: center;
+    margin: 70px 40px 30px 40px;
 }
 
 #content-tab3{
@@ -380,15 +379,31 @@ input[type=button]{
     background-color: #FFFFFA;
     float: left;
     padding: 40px 0; 
+    text-align: center;
     /*padding-top: 40px;*/
     /* padding: 5px; */
 }
 
+.food_type{
+    width: 50%;
+    /* float: left; */
+    padding: 15px;
+    border-bottom: solid 1px #DCDCDC;
+}
+
+.food_type img{
+   max-width: 80px;
+    float: left;
+    max-height: 80px;
+    /* width: 100%; */
+    height: 100%;
+}
+#food_types{
+    padding: 15px;
+}
 
 
-
-
-
+/*Search Bar*/
 .box{
     margin: 10px;
     width: 100%;
@@ -560,8 +575,9 @@ input[type=button]{
     font-size: 14px;
 }
 
-.menu_profile{
+.img_profile{
     max-width: 170px;
+    max-height: 140px;
 }
 
 #mycoment{
@@ -929,4 +945,7 @@ input[type=button]:hover{
 
 }
 */
+
+
+
 
